<resources>
    <string name="app_name" translatable="false">CatPrice</string>
    <string name="image">image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btc_next">Next</string>
    <string name="btc_finish">Finish</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="name">Name</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_dis">Lorem ipsum dolor sit amet consectetur. Dis</string>
    <string name="neque_tempus_dictum_ornare_a_augue">neque tempus dictum ornare a. Augue</string>
    <string name="malesuada">malesuada.</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="welcome_back_we_missed_you" translatable="false">Welcome Back ,We missed you</string>
    <string name="email" translatable="false">Email</string>
    <string name="enter_your_email" translatable="false">Enter Your Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter_your_password" translatable="false">Enter Your Password</string>
    <string name="forget_password" translatable="false">Forget Password?</string>
    <string name="don_t_have_an_account" translatable="false">Don’t have an account?</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="enter_your_full_name" translatable="false">Enter Your Full Name</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="enter_your_phone_number" translatable="false">Enter Your Phone Number</string>
    <string name="country" translatable="false">Country</string>
    <string name="enter_your_country" translatable="false">Enter Your Country</string>
    <string name="individual" translatable="false">Individual</string>
    <string name="company" translatable="false">Company</string>
    <string name="enter_your_company_name" translatable="false">Enter Your Company Name</string>
    <string name="forgot_password" translatable="false">Forgot password</string>
    <string name="enter_your_phone_number_to_reset_your" translatable="false">Enter your Phone Number to reset your</string>
    <string name="send" translatable="false">Send</string>
    <string name="string">ar</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_items" translatable="false">Search items</string>
    <string name="hi" translatable="false">Hi,</string>
    <string name="lets_start_now" translatable="false">Lets Start Now</string>
    <string name="search" translatable="false">Search</string>
    <string name="my_tools" translatable="false">My Tools</string>
    <string name="favourite" translatable="false">Favourite</string>
    <string name="calculator" translatable="false">Calculator</string>
    <string name="my_lists" translatable="false">My lists</string>
    <string name="brands" translatable="false">Brands</string>
    <string name="inbox" translatable="false">Inbox</string>
    <string name="contact_us" translatable="false">Contact us</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="share_app" translatable="false">Share app</string>
    <string name="subscriptions" translatable="false">Subscriptions</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="language" translatable="false">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="currency" translatable="false">Currency</string>
    <string name="edit_profile" translatable="false">Edit Profile</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="discount_margin" translatable="false">Discount Margin</string>
    <string name="delete_account" translatable="false">Delete Account</string>
    <string name="enter_your_current_password">Enter Your Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="edit">Edit</string>
    <string name="current_password">Current Password</string>
    <string name="please_contact_the_administrator_by">Please Contact The administrator by</string>
    <string name="sending_an_gmail">sending an gmail</string>
    <string name="send_to_admin">Send to Admin</string>
    <string name="message">Message</string>
    <string name="price_list">price list</string>
    <string name="search_item">Search item</string>
    <string name="add_item">Add item</string>
    <string name="share">Share</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item price</string>
    <string name="upload_image">Upload  image</string>
    <string name="my_list">My list</string>
    <string name="list_name">List name</string>
    <string name="save_list">Save list</string>
    <string name="save">Save</string>
</resources>