<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="24dp"
                android:text="@string/sign_up"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textSize="24sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_full_name"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/et_full_name"
                tools:ignore="TextViewEdits" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/et_full_name"
                app:layout_constraintStart_toStartOf="@+id/et_full_name"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/et_phone_number"
                app:layout_constraintStart_toStartOf="@+id/et_phone_number"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/country"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="@+id/et_email"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_country"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/et_country"
                app:layout_constraintStart_toStartOf="@+id/et_country"
                app:layout_constraintTop_toBottomOf="@+id/et_country" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_password"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                tools:ignore="RtlSymmetry" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" >

                <RadioButton
                    android:id="@+id/btn_select_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/individual"
                    android:textSize="12sp"
                    android:buttonTint="@color/yellow"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/hint"/>

                <RadioButton
                    android:id="@+id/btn_select_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="12sp"
                    android:buttonTint="@color/yellow"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/hint"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/company"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/radio"
                app:layout_constraintStart_toStartOf="@+id/radio"
                app:layout_constraintTop_toBottomOf="@+id/radio"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_company_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edit_text_rounded"
                android:fontFamily="@font/poppins"
                android:gravity="center_vertical"
                android:hint="@string/enter_your_company_name"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17"
                tools:ignore="RtlSymmetry"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/et_company_name"
                app:layout_constraintStart_toStartOf="@+id/et_company_name"
                app:layout_constraintTop_toBottomOf="@+id/et_company_name" />

            <LinearLayout
                android:id="@+id/ll_new_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
                app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_new_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign_in_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="5dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/yellow"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>